--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -11,7 +11,7 @@
         <p><%= simple_format(truncate(product.description, length: 120)) %></p>
         <p class="lead"><%= number_to_currency product.price %></p>
         <p>
-          <%= link_to"#", class: "btn btn-primary" do %>
+          <%= link_to add_product_cart_path(product_id: product.id), method: :post, class: "btn btn-primary" do %>
             <i class="fa fa-shopping-cart"></i> Dodaj do koszyka
           <% end %>
         </p>
