--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+ <div class="container-fluid">
     <div class="col-md-5">
       <h1><%= @product.name %></h1>
         <p class="lead"><%= @product.description %></p>
@@ -6,7 +6,7 @@
 
         <p class="lead"><%= number_to_currency(@product.price) %></p>
         <p>
-          <%= link_to"#", class: "btn btn-primary" do %>
+          <%= link_to add_product_cart_path(product_id: @product.id), method: :post, class: "btn btn-primary" do %>
             <i class="fa fa-shopping-cart"></i> Dodaj do koszyka
           <% end %>
         </p>
